src/test/data/tests/pragma/invalid/invalid_escape_sequence_2.c
#pragma data 0x00 "\k"

int main(void) {
    return 0;
}
